# cohort_curation

./: .gitignore  README.md  WORKFLOW.md  pyproject.toml
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/agents/: regimen-curation-orchestrator.agent.md
.github/skills/cohort-curation/: SKILL.md
.github/skills/cohort-curation/references/: implementation.md  protocol.md
.github/skills/guideline-evidence-search/: SKILL.md
.github/skills/guideline-evidence-search/references/: output-templates.md  search-playbook.md
cohort_analyses/2026-03-18_pd1_pdl1_impact_pre_first_progression_gt365/: build_cohort.py  cohort.md  final_cohort_patient_ids.txt
cohort_analyses/2026-03-18_pd1_pdl1_impact_pre_progression/: build_cohort.py  cohort.md  final_cohort_patient_ids.txt
cohort_analyses/2026-03-18_test_ici_impact_pre_treatment/: build_cohort.py  criteria.md  final_cohort_patient_ids.txt
cohort_curation/: WORKFLOW.md  __init__.py  build_cohort_template.py  cohort_criteria_template.md  constants.py  io.py  recognized_constants_snapshot.json  reference_data.py  reference_guide.md
cohort_curation/loaders/: __init__.py  diagnosis.py  followup.py  genomics.py  histopathology.py  imaging.py  labs.py  patient.py  procedures.py
parse_pdf/: __init__.py  __main__.py  chunking.py  cli.py  config.py  extractor.py  models.py  pipeline.py  structure.py  utils.py  validate.py  writers.py
