[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guideline_curation"
version = "0.1.0"
description = "Clinical guideline curation with grounding from real world data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pdfplumber>=0.11.0",
  "pypdf>=5.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["guideline_curation*"]
